Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -1,4 +1,2 @@
 <!DOCTYPE html>
-    <a>Flatiron School<a href = https:/flatironschool.com></a>
-    </a>
-    
+    <a href='https:/flatironschoo.com'>Flatiron School</a>
