--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
 <!DOCTYPE html>
-    <a href='https:/flatironschoo.com'>Flatiron School</a>
+    <a href='https:/flatironschool.com'>Flatiron School</a>
